--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html lang="pt-BR"><head>    <meta charset="UTF-8">    <title>Enviar Texto</title>    <link rel="stylesheet" href="style.css"></head><body>    <!-- Estrelas -->    <div class="stars"></div>    <!-- Conteúdo -->    <div class="container">        <input type="text" id="nome" placeholder="Digite seu nome">        <textarea id="texto" placeholder="Cole aqui"></textarea>        <button onclick="enviar()">Enviar</button>    </div>    <script src="script.js"></script></body></html>
+<body>
+
+    <div class="stars"></div>
+
+    <div class="container">
+        <input type="text" id="nome" placeholder="Digite seu nome">
+        <textarea id="texto" placeholder="Cole aqui"></textarea>
+        <button onclick="enviar()">Enviar</button>
+    </div>
+
+    <script src="script.js"></script>
+</body>
