--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
         <button onclick="enviar()">Enviar</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src=".script.js"></script>
 </body>
