--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <body>
 
-    <div class="stars"></div>
-
     <div class="container">
         <input type="text" id="nome" placeholder="Digite seu nome">
         <textarea id="texto" placeholder="Cole aqui"></textarea>
         <button onclick="enviar()">Enviar</button>
     </div>
 
-    <script src=".script.js"></script>
+    <script src="./script.js"></script>
 </body>
