--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Meu Site</title>
+
+    <!-- CSS OBRIGATÓRIO -->
+    <link rel="stylesheet" href="./style.css">
+</head>
+
 <body>
 
     <div class="container">
@@ -6,5 +16,7 @@
         <button onclick="enviar()">Enviar</button>
     </div>
 
+    <!-- JS OBRIGATÓRIO -->
     <script src="./script.js"></script>
 </body>
+</html>
